...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activities.LoginActivity">

    <EditText
        android:id="@+id/editTextUsuario"
        android:layout_width="249dp"
        android:layout_height="58dp"
        android:layout_marginBottom="76dp"
        android:ems="10"
        android:hint="Usuario"
        android:inputType="text"
...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.785"
        app:rippleColor="#F6CE93"
        app:strokeColor="#F6CE93" />

    <EditText
        android:id="@+id/editTextContraseña"
        android:layout_width="250dp"
        android:layout_height="56dp"
        android:layout_marginBottom="188dp"
        android:ems="10"
        android:hint="Contraseña"
        android:inputType="textPassword"
...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035"
        app:srcCompat="@drawable/img"
        tools:srcCompat="@drawable/img" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:backgroundTintMode="add"
        android:text="Iniciar Sesion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.856" />

    <Button
        android:id="@+id/buttonRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:backgroundTintMode="add"
        android:text="Registrarse"
        app:layout_constraintBottom_toBottomOf="parent"
...
