...
        android:layout_marginEnd="59dp"
        android:layout_marginRight="59dp"
        android:orientation="horizontal"
        android:rotationX="-8" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/botonFiltros"
        android:layout_width="56dp"
        android:layout_height="52dp"
        android:layout_below="@id/textView2"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
...
        android:clickable="true"
        android:tint="#B61919"
        app:backgroundTint="@color/colorNavIcon"
        app:srcCompat="@drawable/filtro" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="413dp"
        android:layout_above="@+id/bottom_navigation"
        android:layout_below="@id/buscador"
        android:layout_centerInParent="true"
        android:layout_marginTop="114dp"
...
